--- a/app/src/main/res/drawable/background_layout.xml
+++ b/app/src/main/res/drawable/background_layout.xml
@@ -5,16 +5,17 @@
     tools:ignore="ExtraText">
 
     // The width and color of the border
-    <solid android:color="#6A2196F3" />
-
+    <stroke
+        android:width="1dp"
+        android:color="@color/colorAccent" />
     // The desired corner radius. reduce it to keep it less rounded
-    <corners android:radius="20dp" />
+    <corners android:radius="3dp" />
 
     // Add your desired padding
     <padding
         android:bottom="5dp"
         android:left="10dp"
         android:right="10dp"
-        android:top="5dp"></padding>
+        android:top="5dp" />
 
 </shape>
